including experimental enviro in the list of options for execution

--- a/.github/workflows/deploy_iac.yml
+++ b/.github/workflows/deploy_iac.yml
@@ -8,12 +8,13 @@ name: "Deploy Infrastructure"
         required: true
         type: string
       environment:
-        description: "Environment to deploy (staging/production)"
+        description: "Environment to deploy (staging/production/experimental)"
         required: true
         type: choice
         options:
           - staging
           - production
+          - experimental
         default: "staging"
 
 permissions:
