adding experimental branch to deploy codebase yaml

--- a/.github/workflows/deploy_codebase.yml
+++ b/.github/workflows/deploy_codebase.yml
@@ -10,6 +10,7 @@ name: "Deploy VanillaTsTodo: IaC and Codebase"
         options:
           - staging
           - production
+          - experimental
         default: "staging"
 
 permissions:
