--- a/.github/workflows/deploy_iac.yml
+++ b/.github/workflows/deploy_iac.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Deploy Network Resources
         id: network
         run: |
-          cd terraform/01_network
+          cd devops/terraform/01_network
           terraform init \
             -backend-config="bucket=${{ env.BUCKET_NAME }}" \
             -backend-config="key=${{ env.ENVIRONMENT }}/network/terraform.tfstate" \
@@ -101,7 +101,7 @@ jobs:
       - name: Deploy EKS Resources
         id: eks
         run: |
-          cd terraform/02_eks
+          cd devops/terraform/02_eks
           terraform init \
             -backend-config="bucket=${{ env.BUCKET_NAME }}" \
             -backend-config="key=${{ env.ENVIRONMENT }}/eks/terraform.tfstate" \
@@ -117,7 +117,7 @@ jobs:
       - name: Deploy Monitoring Resources
         id: monitoring
         run: |
-          cd terraform/03_monitoring
+          cd devops/terraform/03_monitoring
           terraform init \
             -backend-config="bucket=${{ env.BUCKET_NAME }}" \
             -backend-config="key=${{ env.ENVIRONMENT }}/monitoring/terraform.tfstate" \
