preventing automatic execution until debug phase is over

--- a/.github/workflows/deploy_iac_codebase.yml
+++ b/.github/workflows/deploy_iac_codebase.yml
@@ -1,9 +1,9 @@
 name: "Deploy IaC and Codebase"
 
 on:
-  push:
-    branches:
-      - staging
+  # push:
+  #   branches:
+  #     - staging
   workflow_dispatch:
     inputs:
       environment:
