--- a/.github/workflows/destroy_iac.yml
+++ b/.github/workflows/destroy_iac.yml
@@ -14,6 +14,7 @@ name: "Destroy IaC Resources"
         options:
           - staging
           - production
+          - experimental
         default: "staging"
 
 permissions:
